# mini-marquee

./: Cargo.toml  README.md
physical/: Cargo.toml
physical/src/: main.rs
serial-client/: index.html
serial-onchip/: Cargo.toml
serial-onchip/src/: main.rs
serial-server/: Cargo.toml
serial-server/src/: main.rs
simulation/: Cargo.toml
simulation/src/: main.rs
src/: lib.rs  main.rs
