[workspace]
members = ["physical", "simulation"]

[package]
name = "mini-marquee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = { version = "0.7"}
embedded-graphics = "0.8.0"
embedded-graphics-core = "0.4.0"
embedded-hal ="0.2.5"
fugit = "0.3.5"
nb = "1.0.0"
panic-halt= "0.2.0"
rp2040-boot2 = { version = "0.2.0", optional = true }
rp2040-hal = { version = "0.8.0" }
smart-leds = "0.3.0"
ssd1306 = "0.8.0"
waveshare-rp2040-zero = "0.6.0"
ws2812-pio = "0.6.0"
