[package]
name = "serial-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.1"
axum = "0.5.11"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0"
